--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore coverage
+/coverage
+
+# Ignore application configuration
+/config/application.yml
+
+/spec/examples.txt
