--- a/spec/cassettes/Api_V1_Forecast/GET_api/v1/forecast/With_an_invalid_location/responds_with_invalid_location_message.yml
+++ b/spec/cassettes/Api_V1_Forecast/GET_api/v1/forecast/With_an_invalid_location/responds_with_invalid_location_message.yml
@@ -23,18 +23,18 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Fri, 04 Jan 2019 12:29:57 GMT
+      - Fri, 04 Jan 2019 17:38:25 GMT
       Server:
       - RapidAPI-1.0.2
       X-Powered-By:
       - PHP/7.2.13
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '33'
       Connection:
       - keep-alive
     body:
       encoding: UTF-8
       string: '{"powerdBy":"deVru","Results":[]}'
     http_version: 
-  recorded_at: Fri, 04 Jan 2019 12:29:57 GMT
+  recorded_at: Fri, 04 Jan 2019 17:38:25 GMT
 recorded_with: VCR 4.0.0
