Added AWS configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,3 +69,35 @@ jobs:
           paths:
             - cc-test-reporter
             - codeclimate.backend.json
+
+
+version: 2
+jobs:
+  deploy:
+    working_directory: ~/app
+    docker:
+      - image: circleci/ruby:2.4.3
+    steps:
+      - checkout
+
+      - run:
+          name: Installing deployment dependencies
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install python-pip python-dev build-essential
+            sudo pip install awsebcli --upgrade
+
+      - run:
+          name: Deploying
+          command: eb deploy $master-sweater-weather-wf
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - deploy:
+          filters:
+            branches:
+              only:
+                - master
