--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
           paths:
             - cc-test-reporter
             - codeclimate.backend.json
-            
+
   deploy:
     working_directory: ~/sweater-weather
     docker:
@@ -93,6 +93,7 @@ workflows:
   version: 2
   build:
     jobs:
+      - build
       - deploy:
           filters:
             branches:
