--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,14 +88,14 @@ jobs:
       - run:
           name: Deploying
           command: eb deploy $master-sweater-weather-wf
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build
-      - deploy:
-          filters:
-            branches:
-              only:
-                - master
+# 
+# workflows:
+#   version: 2
+#   build:
+#     jobs:
+#       - build
+#       - deploy:
+#           filters:
+#             branches:
+#               only:
+#                 - master
