--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,9 +1,14 @@
 branch-defaults:
-  master:
+  aws-setup:
     environment: master-sweater-weather-wf
 global:
   application_name: Sweater Weather API
-  default_ec2_keyname: asdf
-  default_platform: Puma with Ruby 2.5 running on 64bit Amazon Linux/2.8.7
-  default_region: eu-west-1
+  branch: master
+  default_ec2_keyname: aws-eb
+  default_platform: Ruby 2.4 (Puma)
+  default_region: us-west-2
+  include_git_submodules: true
+  profile: eb-cli
+  repository: sweater-weather-wf
   sc: git
+  workspace_type: Application
