--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
           command: |
             sudo apt-get -y -qq update
             sudo apt-get install python-pip python-dev build-essential
-            sudo pip install awsebcli --upgrade
+            sudo pip install -Iv awsebcli==3.12.1
 
       - run:
           name: Deploying
